output_CompileSimulator.log
Converting images
Compiling gui/src/model/Model.cpp
gui/src/model/Model.cpp: In constructor 'Model::Model()':
gui/src/model/Model.cpp:7:36: error: class 'Model' does not have any field named 'nbVoleurs'
 Model::Model() : modelListener(0), nbVoleurs(0)
                                    ^~~~~~~~~
simulator/gcc/Makefile:217: recipe for target 'build/MINGW32_NT-6.2/gui/src/model/Model.o' failed
make[2]: *** [build/MINGW32_NT-6.2/gui/src/model/Model.o] Error 1
simulator/gcc/Makefile:179: recipe for target 'generate_assets' failed
make[1]: *** [generate_assets] Error 2
simulator/gcc/Makefile:40: recipe for target 'all' failed
make: *** [all] Error 2
